# AI-Generated-Books

./: Android开发环境搭建与进阶指南.html  cpp-dev-environment-guide.html  cpp-tutorial-for-csharp-developers.html  windows-python-setup-guide.html
C/: c-language-guide.html
Cpp/: cpp-exercises-and-examples.html  cpp-library-cheatsheet.html  cpp_advanced_guide.html
Engine/: on-device-inference-engines-report.html
Engineering/: PiDiNet 模型格式转换工程.html  从零理解 PiDiNet.html  大模型格式与部署工程实践研究报告.html
Python/: windows-python-setup-guide.html
Stock/: 513040_T0_Strategy_Report.html
Stock/code/: backtest.py  backtest_report.html  config.py  data_provider.py  gui.py  main.py  notifier.py  pyproject.toml  requirements.txt  signals.py
